--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ a {
   color: inherit;
 }
 
+#root{
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  background-color: orange;
+  display: flex;
+  flex-direction: column;
+}
+
 
 /* body {
   margin: 0;
